--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/bootstrap.css">
+  <link rel="stylesheet" href="assets/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jomhuria&display=swap" rel="stylesheet">
@@ -18,6 +18,54 @@
 </head>
 
 <body>
+  <header class="container-fluid bg-primary">
+    <div class="row">
+      <div class="col">
+        <h1>Moon Miner</h1>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="row text-center">
+      <div class="col text-center">
+        <h2>Mine that Cheese!</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-7">
+        <img class="w-100" src="assets/moon_small.jpg" onclick="mine()" alt="Moon Image">
+      </div>
+      <div class="col-5">
+        <h4>Stats</h4>
+        <h3><i class="mdi mdi-cheese"></i>
+          <h1>Cheese: <span id="displayCheese">0</span></h1>
+        </h3>
+      </div>
+    </div>
+    <div class="row flex-row justify-content-around mt-4">
+      <div class="col">
+        <button type="button" class="btn btn-outline-primary" onclick="buyBuy1()">-1 Buy Me1</button>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-outline-primary">-5 Buy Me5</button>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-outline-primary">-20 Buy Me20</button>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-outline-primary">-50 Buy Me50</button>
+      </div>
+    </div>
+  </main>
+  <footer class="container-fluid bg-primary">
+    <div class="row">
+      <div class="col">
+        <h6>by Sherene <i class="mdi mdi-nature text-white"></i></h6>
+      </div>
+    </div>
+  </footer>
+
+
   <script src="app.js"></script>
 </body>
 
