modified click count on buy1

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <h4>Stats</h4>
         <h3><i class="mdi mdi-cheese"></i>
           <h1>Cheese: <span id="displayCheese">0</span></h1>
+          <h4>Buy1: <span id="displayBuy1">0</span></h4>
+          <h4>Buy2: <span id="displayBuy2">0</span></h4>
+          <h4>Buy3: <span id="displayBuy3">0</span></h4>
         </h3>
       </div>
     </div>
@@ -47,10 +50,10 @@
         <button type="button" class="btn btn-outline-primary" onclick="buyBuy1()">-1 Buy Me1</button>
       </div>
       <div class="col">
-        <button type="button" class="btn btn-outline-primary">-5 Buy Me5</button>
+        <button type="button" class="btn btn-outline-primary" onclick="buyBuy2()">-2 Buy Me2</button>
       </div>
       <div class="col">
-        <button type="button" class="btn btn-outline-primary">-20 Buy Me20</button>
+        <button type="button" class="btn btn-outline-primary" onclick="buyBuy3()">-3 Buy Me3</button>
       </div>
       <div class="col">
         <button type="button" class="btn btn-outline-primary">-50 Buy Me50</button>
