--- a/index.html
+++ b/index.html
@@ -26,37 +26,44 @@
     </div>
   </header>
   <main>
-    <div class="row text-center">
+    <div class="row text-center container-fluid">
       <div class="col text-center">
         <h2>Mine that Cheese!</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-7">
-        <img class="w-100" src="assets/moon_small.jpg" onclick="mine()" alt="Moon Image">
+      <div class="col-7 text-center">
+        <img class="w-100 m-1" src="assets/moon_small.jpg" onclick="mine()" alt="Moon Image">
       </div>
       <div class="col-5">
         <h4>Stats</h4>
         <h3><i class="mdi mdi-cheese"></i>
           <h1>Cheese: <span id="displayCheese">0</span></h1>
-          <h4>Buy1: <span id="displayBuy1">0</span></h4>
-          <h4>Buy2: <span id="displayBuy2">0</span></h4>
-          <h4>Buy3: <span id="displayBuy3">0</span></h4>
+          <h4>Toothpick: <span id="displaytoothpick">0</span></h4>
+          <h4>Cheese Slicer: <span id="displayCheeseSlicer">0</span></h4>
+          <h4>Cheese Knife: <span id="displayCheeseKnife">0</span></h4>
+          <h4>Key to the Cheese Cave: <span id="displayCheeseCave">0</span></h4>
         </h3>
       </div>
     </div>
     <div class="row flex-row justify-content-around mt-4">
       <div class="col">
-        <button type="button" class="btn btn-outline-primary" onclick="buyBuy1()">-1 Buy Me1</button>
+        <button type="button" id="toothpickbtn" class="btn btn-outline-primary" onclick="buytoothpick()">-1 Buy
+          Toothpick</button>
       </div>
       <div class="col">
-        <button type="button" class="btn btn-outline-primary" onclick="buyBuy2()">-2 Buy Me2</button>
+        <button type="button" id="cheeseSlicerbtn" class="btn btn-outline-primary" onclick="buyCheeseSlicer()">-2 Buy
+          Cheese Slicer</button>
       </div>
       <div class="col">
-        <button type="button" class="btn btn-outline-primary" onclick="buyBuy3()">-3 Buy Me3</button>
+        <button type="button" id="cheeseKnifebtn" class="btn btn-outline-primary" onclick="buyCheeseKnife()">-3 Buy
+          Cheese Knife</button>
+        <h6>Now mining <span id="cheeseKnifeMods">1</span><span> cheeses per click!</span></h6>
       </div>
       <div class="col">
-        <button type="button" class="btn btn-outline-primary">-50 Buy Me50</button>
+        <button type="button" id="cheeseCavebtn" class="btn btn-outline-primary" onclick="buyCheeseCave()">-50 Buy Key
+          to Cheese Cave</button>
+        <h6>Auto earning <span id="autoMods">0</span><span> cheeses every 3 seconds!!</span></h6>
       </div>
     </div>
   </main>
