image background removed

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
   <main>
     <div class="row text-center container-fluid">
       <div class="col text-center">
-        <h2>Mine that Cheese!</h2>
+        <h2>Click on the moon to <span><h1>Mine that Cheese!</h1></span></h2>
       </div>
     </div>
     <div class="row">
       <div class="col-7 text-center">
-        <img class="w-100 m-1" src="assets/moon_small.jpg" onclick="mine()" alt="Moon Image">
+        <img class="w-100 m-1" src="assets/moon_small.png" onclick="mine()" alt="Moon Image">
       </div>
       <div class="col-5">
         <h4>Stats</h4>
         <h3><i class="mdi mdi-cheese"></i>
-          <h1>Cheese: <span id="displayCheese">0</span></h1>
+          <h1>Cheese Slices Mined: <span id="displayCheese">0</span></h1>
           <h4>Toothpick: <span id="displaytoothpick">0</span></h4>
           <h4>Cheese Slicer: <span id="displayCheeseSlicer">0</span></h4>
           <h4>Cheese Knife: <span id="displayCheeseKnife">0</span></h4>
