--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
   <header class="container-fluid bg-primary">
     <div class="row">
-      <div class="col">
-        <h1>Moon Miner</h1>
+      <div id="scroll-container" class="col">
+        <h1 id="scroll-text">Moon Miner</h1>
       </div>
     </div>
   </header>
