--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   <main>
     <div class="row text-center container-fluid">
       <div class="col text-center">
-        <h2>Click on the moon to <span><h1>Mine that Cheese!</h1></span></h2>
+        <h4>Click on the moon to <span><h1>Mine that Cheese!</h1></span></h4>
       </div>
     </div>
     <div class="row">
-      <div class="col-7 text-center">
-        <img class="w-100 m-1" src="assets/moon_small.png" onclick="mine()" alt="Moon Image">
+      <div class="col-md-6 pb-1 text-center">
+        <img class="w-75" src="assets/moon_small.png" onclick="mine()" alt="Moon Image">
       </div>
-      <div class="col-5">
-        <h4>Stats</h4>
-        <h3><i class="mdi mdi-cheese"></i>
+      <div class="col-md-6 p-4 d-flex flex-column">
+        <h4 class="text-center">Stats</h4>
+        <h3 class=" align-self-center pb-0 d-flex"><i class="mdi mdi-cheese"></i>
           <h1>Cheese Slices Mined: <span id="displayCheese">0</span></h1>
           <h4>Toothpick: <span id="displaytoothpick">0</span></h4>
           <h4>Cheese Slicer: <span id="displayCheeseSlicer">0</span></h4>
