--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="col-md-6 pb-1 text-center">
         <img class="w-75" src="assets/moon_small.png" onclick="mine()" alt="Moon Image">
       </div>
-      <div class="col-md-6 p-4 d-flex flex-column">
+      <div class="col-md-6 d-flex flex-column">
         <h4 class="text-center">Mine Stats</h4>
         <h3 class=" align-self-center pb-0 d-flex"><i class="mdi mdi-cheese"></i>
         </h3>
@@ -51,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div class="row mt-4">
+    <div class="row mt-4 pb-2">
       <div class="col-md-12 d-flex justify-content-between">
         <button type="button" id="toothpickbtn" class="btn btn-outline-primary mx-2" onclick="buytoothpick()">-1 Buy
           Toothpick</button>
