cheese slicer button hid until enough cheese

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="col-md-6 d-flex justify-content-around pb-2">
             <button type="button" id="toothpickbtn" class="btn btn-outline-primary mx-2" onclick="buytoothpick()">-1 Buy
               Toothpick</button>
-              <button type="button" id="cheeseSlicerbtn" class="btn btn-outline-primary mx-2" onclick="buyCheeseSlicer()">-2 Buy
+              <button type="button" id="cheeseSlicerbtn" class="btn btn-outline-primary mx-2" style="display: none;" onclick="buyCheeseSlicer()">-2 Buy
               Cheese Slicer</button>
           </div>
           <div class="col-md-6 d-flex justify-content-around pb-2">
