--- a/index.html
+++ b/index.html
@@ -54,16 +54,28 @@
     <div class="row p-2 mt-4">
       <div class="col">
         <div class="row">
-          <div class="col-md-6 d-flex justify-content-around pb-2">
-            <button type="button" id="toothpickbtn" class="btn btn-outline-primary mx-2" onclick="buytoothpick()">-1 Buy
-              Toothpick</button>
-              <button type="button" id="cheeseSlicerbtn" class="btn btn-outline-primary mx-2" style="display: none;" onclick="buyCheeseSlicer()">-2 Buy
-              Cheese Slicer</button>
+          <div class="col-md-6 pb-2">
+            <div class="row">
+              <div class="col-6 align-items-center">
+                <button type="button" id="toothpickbtn" class="btn btn-outline-primary mx-2" onclick="buytoothpick()">-1 Buy
+                  Toothpick</button>
+              </div>
+              <div class="col-6 align-items-center">
+                <button type="button" id="cheeseSlicerbtn" class="btn btn-outline-primary mx-2" style="display: none;" onclick="buyCheeseSlicer()">-2 Buy
+                Cheese Slicer</button>
+              </div>
+            </div>
           </div>
-          <div class="col-md-6 d-flex justify-content-around pb-2">
-            <button type="button" id="cheeseKnifebtn" class="btn btn-outline-primary mx-2" onclick="buyCheeseKnife()">-3 Buy
-            Cheese Knife</button>
-            <button type="button" id="cheeseCavebtn" class="btn btn-outline-primary mx-2" onclick="buyCheeseCave()">-50 Buy Key to Cheese Cave</button>
+          <div class="col-md-6 pb-2">
+            <div class="row">
+              <div class="col-6">
+                <button type="button" id="cheeseKnifebtn" class="btn btn-outline-primary mx-2" style="display: none;" onclick="buyCheeseKnife()">-3 Buy
+                Cheese Knife</button>
+              </div>
+              <div class="col-6">
+                <button type="button" id="cheeseCavebtn" class="btn btn-outline-primary mx-2" onclick="buyCheeseCave()">-50 Buy Key to Cheese Cave</button>
+              </div>
+            </div>
         </div>
         </div>  
       </div>
