--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="col-md-6 pb-2">
             <div class="row">
               <div class="col-6 align-items-center">
-                <button type="button" id="toothpickbtn" class="btn btn-outline-primary mx-2" onclick="buytoothpick()">-1 Buy
+                <button type="button" id="toothpickbtn" class="btn btn-outline-primary mx-2" style="display: none;" onclick="buytoothpick()">-1 Buy
                   Toothpick</button>
               </div>
               <div class="col-6 align-items-center">
