cheese cave sold out & hide works

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 Cheese Knife</button>
               </div>
               <div class="col-6">
-                <button type="button" id="cheeseCavebtn" class="btn btn-outline-primary mx-2" onclick="buyCheeseCave()">-50 Buy Key to Cheese Cave</button>
+                <button type="button" id="cheeseCavebtn" class="btn btn-outline-primary mx-2" style="display: none;" onclick="buyCheeseCave()">-50 Buy Key to Cheese Cave</button>
               </div>
             </div>
         </div>
